# pyserialdrivers

./: LICENSE  README.md  pyproject.toml
etc/: generate_constants.py  ysiexo_paramcodes.csv
pyserialdrivers/: __init__.py
pyserialdrivers/exo/: DCPBase.py  _gen_constants.py  constants.py  serial.py  telnet.py
pyserialdrivers/nortek/: base.py  classic.py  constants.py
tests/: conftest.py  emulator.py  test_constants.py  test_serial.py  test_telnet.py  test_telnet_real.py  test_wiping.py
tests/nortek/: test_classic.py
